<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_activity_detail">Detail</string>
    <string name="movie">Movie</string>
    <string name="tv">TV Show</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="rating">Rating</string>
    <string name="runtime">Runtime</string>
    <string name="tagline_or_creator">Tagline/Creator</string>
    <string name="tagline_or_creator_text">Tagline/Creator Text</string>
    <string name="tagline">Tagline</string>
    <string name="synopsys">Synopsys</string>
    <string name="synopsis_text">Synopsys Text</string>
    <string name="release_date">Release Date</string>
    <string name="date_text">Date Text</string>
    <string name="language">Languages</string>
    <string name="language_text">Languages Text</string>
    <string name="countries_of_origin">Countries of Origin</string>
    <string name="countries_of_origin_text">Countries of Origin Text</string>
    <string name="production_companies">Production Companies</string>
    <string name="production_companies_text">Production Companies Text</string>
    <string name="creator">Creator</string>
    <string name="movie_logo">Movie Logo</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="share_text">%s \n%s \n\nSynopsys: \n%s \n\nLets see and find your favorite Movie and Tv Show in MovieCatalogue App by Muhammad Fauzi Maulana</string>
    <string name="message_undo">Do you want to restore the item?</string>
    <string name="message_ok">OK</string>
    <string name="ascending">Ascending (A-Z)</string>
    <string name="descending">Descending (Z-A)</string>
    <string name="random">Random</string>
    <string name="alert">Alert</string>
    <string name="alert_message">Are you sure want to delete %s from your Favorite %s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="removed">%s has been removed from Favorite</string>
    <string name="added">%s has been added to Favorite</string>

    <string name="seasons">Number of Seasons</string>
    <string name="episodes">Number of Episodes</string>
    <string name="budget_or_seasons">Budget or Seasons</string>
    <string name="revenue_or_episodes">Revenue or Episodes</string>
    <string name="budget_or_seasons_text">Budget or Seasons Text</string>
    <string name="revenue_or_episodes_text">Revenue or Episodes Text</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="first_air_date">First Air Date</string>
    <string name="homepage">Homepage</string>
    <string name="homepage_text">Homepage Text</string>
    <string name="title_favorite">Favorite</string>
</resources>